--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,10 +1,10 @@
 :root{
     --main-color: rgb(225, 200, 170);
-    --header-and-footer-color: ;
-    --container-color: ;
+    --container-color: rgb(153, 135, 101);
+    --header-and-footer-color: rgb(135, 110, 73);
 
-    --heading-color: ;
-    --paragraph-color: ;
+    --heading-color: rgb(73, 53, 16);
+    --paragraph-color: rgb(216, 193, 164);
 
     --link-color: ;
     --icon-instagram-color: ;
