--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,11 +1,13 @@
 :root{
-    --main-color: rgb(225, 200, 170);
-    --container-color: rgb(153, 135, 101);
+    --main-color: rgb(152, 116, 74);
+    --container-color: rgb(233, 213, 181);
     --header-and-footer-color: rgb(135, 110, 73);
 
     --heading-color: rgb(73, 53, 16);
+    --heading-2-color: rgb(73, 55, 14);
+    --background-of-the-paragraph-color: rgb(46, 18, 0);
     --paragraph-color: rgb(216, 193, 164);
-
+    
     --link-color: ;
     --icon-instagram-color: ;
     --icon-facebook-color: ;
