--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,5 +1,5 @@
 :root{
-    --main-color: rgb(152, 116, 74);
+    --body-color: rgb(152, 116, 74);
     --container-color: rgb(233, 213, 181);
     --header-and-footer-color: rgb(135, 110, 73);
 
