--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,9 +1,6 @@
 :root{
-    --body-color: rgb(135, 110, 73);
-    --container-color: rgb(233, 213, 181);
-    --header-and-footer-color: rgb(152, 116, 74);
-
-    --heading-color: rgb(73, 53, 16);
+    --general-background-color: #DFC6A8;
+    --heading-color: rgb(37, 29, 7);
     --heading-2-color: rgb(109, 75, 23);
     --background-paragraph-color: rgb(46, 18, 0);
     --paragraph-color: rgb(235, 219, 195);
