--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,6 @@
 html{
     font-size: 62.5%;
+    background-color: rgb(56, 47, 23);
 }
 
 body{
@@ -7,7 +8,7 @@ body{
     margin: 2.6rem 3rem;
     height: 100vh;
     border: 0.78rem double black;
-    box-shadow: 1.2rem 1.4rem rgb(37, 29, 7);
+    box-shadow: 1.2rem 1.2rem rgba(12, 12, 12, 0.918);
 
     display: grid;
     grid: 'header'
