--- a/src/css/style.css
+++ b/src/css/style.css
@@ -62,6 +62,14 @@ body{
     align-items: center;
 }
 
+.container .books .general-title{
+    font-size: 2.4rem;
+}
+
+.container .books .genre .genre-title{
+    font-size: 2rem;
+}
+
 /* FOOTER */
 .footer{
     grid-area: footer;
