--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,15 +22,27 @@ body{
     grid-area: header;
     background-color: var(--general-background-color);
     max-width: 100%;
+    border-bottom: 0.1rem solid black;
+    padding-bottom: 0.6rem;
     
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 }
 
 /* Logo */
+.header .logo{
+    display: flex;
+    align-items: center;
+}
+
 .header .logo img{
     width: 100%;
+}
+
+.header .logo .logo-title{
+    font-size: 2.2rem;
+    margin-left: 1.2rem;
 }
 
 /* Navegation */
@@ -77,7 +89,6 @@ body{
     text-transform: uppercase;
     
     margin-top: 3rem;
-    border-bottom: 0.5rem solid black;
 }
 
 .container .books .genre .genre-title{
@@ -86,8 +97,6 @@ body{
     text-transform: uppercase;
 
     padding: 0.5rem;
-    border-left: 0.5rem solid red;
-    border-right: 0.5rem solid red;
 }
 
 .container .books .genre .book-name{
@@ -120,6 +129,14 @@ body{
 
 .container .books .genre .books-images .book img{
     width: 100%;
+}
+
+/* FICCAO CIENTIFICA */
+.container .books .genre{
+    border: 0.8rem solid;
+    padding: 1rem;
+    border-image-source: linear-gradient(90deg, rgb(65, 62, 62), rgb(219, 207, 207));
+    border-image-slice: 1;
 }
 
 /* FOOTER */
