--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,6 +17,13 @@ body{
            'footer';
 }
 
+hr{
+    width: 100%;
+    margin-top: 2.8rem;
+    margin-bottom: 2.8rem;
+    border-color: rgba(12, 12, 12, 0.918);
+}
+
 /* HEADER */
 .header{
     grid-area: header;
@@ -133,9 +140,9 @@ body{
 
 /* FICCAO CIENTIFICA */
 .container .books .genre{
-    border: 0.8rem solid;
+    border: 0.4rem solid;
     padding: 1rem;
-    border-image-source: linear-gradient(90deg, rgb(65, 62, 62), rgb(219, 207, 207));
+    border-image-source: linear-gradient(45deg, rgb(34, 33, 33), rgb(202, 188, 188));
     border-image-slice: 1;
 }
 
