--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,7 +30,7 @@ hr{
     background-color: var(--general-background-color);
     max-width: 100%;
     border-bottom: 0.1rem solid black;
-    padding-bottom: 0.6rem;
+    padding: 0 0 0.6rem 0.4rem;
     
     display: flex;
     justify-content: space-between;
