--- a/src/css/style.css
+++ b/src/css/style.css
@@ -43,7 +43,7 @@ hr{
     align-items: center;
 }
 
-.header .logo img{
+.header .logo a img{
     width: 100%;
 }
 
@@ -58,14 +58,14 @@ hr{
 }
 
 .header .menu li{
-    padding: 1rem;
+    padding: 0.1rem;
     font-size: 2rem;
 }
 
 .header .menu li a{
     color: var(--heading-color);
 
-    padding: 0.6rem 1.2rem;
+    padding: 0.4rem 0.8rem;
     border-radius: 2rem;
 }
 
@@ -90,8 +90,9 @@ hr{
 }
 
 /* TITLES */
-.container .books .general-title{
-    font-size: 3.8rem;
+.container .books .general-title,
+.container .panel .general-title{
+    font-size: 3.6rem;
     text-align: center;
     text-transform: uppercase;
     
