--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,16 +5,15 @@ html{
 
 body{
     /* OPÇÃO DE BORDA 1 */
-    border: 4.85rem solid transparent;
+    border: 3rem solid transparent;
     border-image: url("../image/background-images/pergaminho-mobile-01.png") 125 round;
-    /* OPÇÃO DE BORDA 1 */
+    /* OPÇÃO DE BORDA 1
     /* border:3rem solid transparent;
     background-color: #E6AA5A;
-    border-image: url("../image/background-images/pergaminho-mobile-02.png") 125 round; */
+    border-image: url("../image/background-images/pergaminho-mobile-02.png") 180 round; */
 
     max-height: 100%;
-    margin: 1rem;
-    padding: 1rem 0.25rem;
+    padding: 1rem 0.2rem;
     
     display: grid;
     grid: 'header'
