--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -8,7 +8,7 @@
     --book-name-color: #f5f1ec;
     
     --background-hover-link-color: rgb(131, 6, 0);
-    --menu-anchors-color: rgb(239, 0, 13);
+    --anchors-color: rgb(255, 16, 4);
     --link-color: #f5f1ec;
 
     --icon-instagram-color: ;
