--- a/src/css/style.css
+++ b/src/css/style.css
@@ -71,19 +71,21 @@ hr{
 }
 
 .header .menu li{
-    padding: 0.1rem;
+    padding: 0.2rem;
+    margin: 0 0.4rem;
     font-size: 2.6rem;
 }
 
 .header .menu li a{
     color: var(--anchors-color);
 
-    padding: 0.4rem 0.8rem;
+    padding: 0.4rem 1rem;
 }
 
 .header .menu li a:hover{
     background-color: var(--background-hover-link-color);
     color: var(--link-color);
+    border-radius: 2rem;
 }
 
 /* CONTAINER */
@@ -118,6 +120,10 @@ hr{
     margin: 1rem 0;
 }
 
+.footer .inside-the-footer .footer-header{
+    margin: 1.4rem 0;
+}
+
 /* FOOTER: FLEX - column */
 .footer .inside-the-footer,
 .footer .inside-the-footer .footer-header{
@@ -136,12 +142,10 @@ hr{
     align-items: center;
 }
 
-.footer .inside-the-footer .footer-header{
-    margin: 1.4rem;
-}
+/* LOGO */
 
 .footer .inside-the-footer .footer-header .footer-logo{
-    margin: 0 0.6rem;
+    margin: 1.4rem 0;
 }
 
 .footer .inside-the-footer .footer-header .footer-logo a img{
@@ -150,16 +154,34 @@ hr{
 
 .footer .inside-the-footer .footer-header .footer-logo .footer-logo-title{
     margin-left: 0.4rem;
-    font-size: 2rem;
+    font-size: 2.4rem;
 }
 
+/* Navegation */ 
+
 .footer .inside-the-footer .footer-header .navegation .footer-menu{
-    font-size: 1.8rem;
+    font-size: 2rem;
 }
 
 .footer .inside-the-footer .footer-header .navegation .footer-menu li{
     margin: 0 1rem;
+    padding: 0.2rem;
+    font-size: 2.6rem;
 }
+
+.footer .inside-the-footer .footer-header .navegation .footer-menu li a{
+    color: var(--anchors-color);
+
+    padding: 0.4rem 0.8rem;
+}
+
+.footer .inside-the-footer .footer-header .navegation .footer-menu li a:hover{
+    background-color: var(--background-hover-link-color);
+    color: var(--link-color);
+    border-radius: 2rem;
+}
+
+/* CONTACTS */
 
 .footer .inside-the-footer .contacts{
     margin-top: 1rem;
@@ -168,4 +190,13 @@ hr{
 .footer .inside-the-footer .contacts .nets li{
     font-size: 2rem;
     margin: 0 1rem;
+}
+
+.footer .inside-the-footer .contacts .nets li a{
+    color: var();
+}
+
+.footer .inside-the-footer .contacts .nets li a:hover{
+    color: var();
+    background-color: var();
 }
