--- a/src/css/recentes.css
+++ b/src/css/recentes.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'newspaper';
+    src: url('../text-font/newspaper-2/NewspaperCutoutWhiteOnBlac-Rg.ttf');
+}
+
 /* CONTAINER */
 .container{
     grid-area: container;
@@ -13,20 +18,22 @@
 }
 
 /* TITLES */
-.container .books .general-title,
-.container .panel .general-title{
+.container .books .general-title{
     font-size: 3.6rem;
     text-align: center;
     text-transform: uppercase;
+    font-family: newspaper;
+    letter-spacing: 1rem;
     
     margin-top: 3rem;
     color: var(--general-title-color);
 }
 
 .container .books .genre .genre-title{
-    font-size: 2.8rem;
+    font-size: 3.2rem;
     text-align: center;
-    text-transform: uppercase;
+    font-family: newspaper;
+    letter-spacing: 0.5rem;
 
     padding: 0.5rem;
 }
