--- a/src/css/recentes.css
+++ b/src/css/recentes.css
@@ -19,10 +19,11 @@
 
 /* TITLES */
 .container .books .general-title{
+    font-family: newspaper;
     font-size: 3.6rem;
     text-align: center;
     text-transform: uppercase;
-    font-family: newspaper;
+    text-transform: uppercase;
     letter-spacing: 1rem;
     
     margin-top: 3rem;
@@ -30,16 +31,17 @@
 }
 
 .container .books .genre .genre-title{
+    font-family: newspaper;
     font-size: 3.2rem;
     text-align: center;
-    font-family: newspaper;
+    text-transform: uppercase;
     letter-spacing: 0.5rem;
 
     padding: 0.5rem;
 }
 
 .container .books .genre .book-name{
-    font-size: 2.8rem;
+    font-size: 3rem;
     text-align: center;
     color: var(--book-name-color);
 
