--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,13 +12,9 @@ html{
 
 body{
     /* OPÇÃO DE BORDA 1 */
-    border: 4rem solid transparent;
+    border: 2rem solid transparent;
     background-color: var(--background-html-color);
     border-image: url("../image/background-images/pergaminho-mobile-01.png") 125 round;
-    /* OPÇÃO DE BORDA 1
-    /* border:3rem solid transparent;
-    background-color: #E6AA5A;
-    border-image: url("../image/background-images/pergaminho-mobile-02.png") 180 round; */
 
     max-height: 100%;
     max-width: 100%;
@@ -32,8 +28,7 @@ body{
 
 hr{
     width: 100%;
-    margin-top: 2.8rem;
-    margin-bottom: 2.8rem;
+    margin: 2.8rem 0;
     border-color: var(--hr-color);
 }
 
@@ -104,7 +99,7 @@ hr{
 
 .container .panel .general-title{
     margin: 2rem;
-    font-size: 3.4rem;
+    font-size: 3.6rem;
 }
 
 .container .panel p{
