--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,7 +18,7 @@ body{
 
     max-height: 100%;
     max-width: 100%;
-    padding: 1rem 0.2rem;
+    padding: 1rem 1rem 1rem 0.8rem;
     
     display: flex;
     flex-direction: column;
