--- a/src/css/recentes.css
+++ b/src/css/recentes.css
@@ -50,7 +50,7 @@
 
 /* Genre ARTICLES */
 .container .books .genre{
-    margin: 3.4rem 1.6rem 0 1.8rem;
+    margin: 3.4rem 1.4rem 0 1.6rem;
 }
 
 
@@ -60,7 +60,7 @@
     justify-content: center;
     flex-wrap: wrap;
 
-    gap: 10px;
+    gap: 1rem;
     margin-top: 1.8rem;
 }
 
