--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,7 +39,7 @@ hr{
 
 .header-hr, .contaner-hr{
     width: 90%;
-    margin: 2.8rem 0 0 0;
+    margin: 1.6rem 0 0 0;
     border-color: var(--hr-color);
 }
 
@@ -58,7 +58,7 @@ hr{
 .header .logo{
     display: flex;
     align-items: center;
-    margin: 1rem 0;
+    margin: 1rem 0 1.2rem 0;
 }
 
 .header .logo a img{
