--- a/src/css/style.css
+++ b/src/css/style.css
@@ -56,18 +56,19 @@ hr{
 
 /* Logo */
 .header .logo{
+    margin: 1rem 0 1.2rem 0;
     display: flex;
     align-items: center;
-    margin: 1rem 0 1.2rem 0;
 }
 
-.header .logo a img{
+.header .logo img{
     width: 100%;
 }
 
 .header .logo .logo-title{
     font-size: 3.2rem;
     margin-left: 1rem;
+    color: black;
 }
 
 /* Navegation */
