--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,3 +1,61 @@
-@media(min-width: 425){
+@media(max-width: 321px){
+    /* HR */
+    .header-hr, .contaner-hr{
+        width: 90%;
+        margin: 1.4rem 0 0 0;
+    }
+
+    /* HEADER */
+    .header .logo .logo-title{
+        font-size: 3rem;
+    }
+
+    /* Navegation */
+    .header .menu li{
+        font-size: 2.4rem;
+    }
+
+    /* CONTAINER */
+    .container .panel p{
+        margin: 0 1.6rem;
+        font-size: 2rem;
+        line-height: 3rem;
+    }
+
+    .container .panel .general-title{
+        margin: 1rem 0 1.8rem 0;
+        font-size: 2.8rem;
+    }
+
+    /* FOOTER */
+    .footer{
+        margin-bottom: 1.2rem;
+        padding: 0 1rem;
+    }
+
+    /* LOGO */
+    .footer .inside-the-footer .footer-header .footer-logo{
+        margin: 0.4rem 0 1.4rem 0;
+    }
+
+    .footer .inside-the-footer .footer-header .footer-logo .footer-logo-title{
+        font-size: 2.4rem;
+    }
+
+    /* Navegation */ 
+    .footer .inside-the-footer .footer-header .navegation .footer-menu li{
+        padding: 0.2rem;
+        margin: 0 0.2rem;
+        font-size: 2rem;
+    }
+
+    /* CONTACTS */
+    .footer .inside-the-footer .contacts .nets li{
+        font-size: 2rem;
+        margin: 0 0.6rem;
+    }
+}
+
+@media(min-width: 425px){
 
 }
