--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -2,7 +2,7 @@
     /* HR */
     .header-hr, .contaner-hr{
         width: 90%;
-        margin: 1.4rem 0 0 0;
+        margin-top: 1.4rem;
     }
 
     /* HEADER */
@@ -52,6 +52,39 @@
     }
 }
 
-@media(min-width: 425px){
-    
+@media(min-width: 426px){
+    body{
+        /* OPÇÃO DE BORDA 1 */
+        /* border: 3.6rem solid transparent;
+        background-color: var(--background-html-color);
+        border-image: url("../image/background-images/pergaminho-desktop-04.jpg") 125 round; */
+
+        background-image: url(../image/background-images/pergaminho-desktop-04.jpg);
+        border-image: none;
+        
+        max-height: 100%;
+        max-width: 100%;
+        padding: 1rem 0.6rem;
+        margin: 0 0.8rem;
+    }
+
+    /* HR */
+    .header-hr, .contaner-hr{
+        width: 95%;
+        margin-top: 1.4rem;
+    }
+
+    /* HEADER */
+    .header .logo img{
+        width: 100%;
+    }
+
+    .header .logo .logo-title{
+        font-size: 4rem;
+    }
+
+    /* Navegation */
+    .header .menu li{
+        font-size: 2.4rem;
+    }
 }
