--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -16,15 +16,15 @@
     }
 
     /* CONTAINER */
+    .container .panel .general-title{
+        margin: 1rem 0 1.8rem 0;
+        font-size: 2.8rem;
+    }
+    
     .container .panel p{
         margin: 0 1.6rem;
         font-size: 2rem;
         line-height: 3rem;
-    }
-
-    .container .panel .general-title{
-        margin: 1rem 0 1.8rem 0;
-        font-size: 2.8rem;
     }
 
     /* FOOTER */
@@ -75,16 +75,30 @@
     }
 
     /* HEADER */
-    .header .logo img{
-        width: 100%;
-    }
-
     .header .logo .logo-title{
         font-size: 4rem;
     }
 
+    .header .logo img{
+        width: 5rem;
+        height: 5rem;
+    }
+
     /* Navegation */
     .header .menu li{
-        font-size: 2.4rem;
+        font-size: 3.2rem;
+        margin-top: 1rem;
+    }
+
+    /* CONTAINER */
+    .container .panel .general-title{
+        margin: 1rem 0 1.8rem 0;
+        font-size: 4rem;
+    }
+    
+    .container .panel p{
+        margin: 1.4rem 1.6rem;
+        font-size: 3rem;
+        line-height: 3rem;
     }
 }
