--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -109,7 +109,7 @@
     }
 
     .footer .inside-the-footer .footer-header{
-        margin: 1.4rem 0;
+        text-align: center;
     }
 
     /* FOOTER: FLEX - ROW */
@@ -121,5 +121,16 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
+    }
+
+    /* LOGO */
+    .footer .inside-the-footer .footer-header .footer-logo .footer-logo-title{
+        margin: 0 1.4rem 0 1rem;
+        font-size: 2.8rem;
+    }
+
+    /* Navegation */ 
+    .footer .inside-the-footer .footer-header .navegation .footer-menu{
+        font-size: 2.8rem;
     }
 }
