--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -108,29 +108,30 @@
         padding: 0 1rem;
     }
 
-    .footer .inside-the-footer .footer-header{
-        text-align: center;
-    }
-
-    /* FOOTER: FLEX - ROW */
-    .footer .inside-the-footer .footer-header,
-    .footer .inside-the-footer .footer-header .footer-logo,
-    .footer .inside-the-footer .footer-header .navegation .footer-menu,
-    .footer .inside-the-footer .contacts .nets{
+    .footer .inside-the-footer{
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-around;
         align-items: center;
+    }
+
+    .footer .inside-the-footer .footer-header{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 
     /* LOGO */
     .footer .inside-the-footer .footer-header .footer-logo .footer-logo-title{
-        margin: 0 1.4rem 0 1rem;
-        font-size: 2.8rem;
+        margin: 0 1.8rem 0 1rem;
+        font-size: 3.6rem;
     }
 
     /* Navegation */ 
-    .footer .inside-the-footer .footer-header .navegation .footer-menu{
-        font-size: 2.8rem;
+    .footer .inside-the-footer .footer-header .navegation .footer-menu li{
+        padding: 0.2rem;
+        margin: 0 0.2rem;
+        font-size: 3rem;
     }
 }
