--- a/src/css/style.css
+++ b/src/css/style.css
@@ -162,6 +162,7 @@ hr{
 .footer .inside-the-footer .footer-header .footer-logo .footer-logo-title{
     margin-left: 1rem;
     font-size: 2.8rem;
+    color: black;
 }
 
 /* Navegation */ 
