--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -10,6 +10,11 @@
         font-size: 3rem;
     }
 
+    .header .logo img{
+        width: 5rem;
+        height: 5rem;
+    }
+
     /* Navegation */
     .header .menu li{
         font-size: 2.4rem;
@@ -22,8 +27,8 @@
     }
     
     .container .panel p{
-        margin: 0 1.6rem;
-        font-size: 2rem;
+        margin: 0 1.4rem;
+        font-size: 2.2rem;
         line-height: 3rem;
     }
 
@@ -64,8 +69,8 @@
         
         max-height: 100%;
         max-width: 100%;
-        padding: 1rem 0.6rem;
-        margin: 0 0.8rem;
+        padding: 1rem 0.2rem;
+        margin: 0 0.2rem;
     }
 
     /* HR */
