--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,8 +12,9 @@ html{
 body{
     /* OPÇÃO DE BORDA 1 */
     border: 3.6rem solid transparent;
-    background-color: var(--background-html-color);
+    /* background-color: var(--background-html-color); */
     border-image: url("../image/background-images/pergaminho-mobile-01.png") 125 round;
+    background-image: url(../image/background-images/pergaminho-desktop-04.jpg);
 
     max-height: 100%;
     max-width: 100%;
