--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,4 +1,9 @@
 @media(max-width: 321px){
+    /* BODY */
+    body{
+        margin: 0 1rem;
+    }
+
     /* HR */
     .header-hr, .contaner-hr{
         width: 90%;
@@ -59,11 +64,6 @@
 
 @media(min-width: 426px){
     body{
-        /* OPÇÃO DE BORDA 1 */
-        /* border: 3.6rem solid transparent;
-        background-color: var(--background-html-color);
-        border-image: url("../image/background-images/pergaminho-desktop-04.jpg") 125 round; */
-
         background-image: url(../image/background-images/pergaminho-desktop-04.jpg);
         border-image: none;
         
