--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,7 +1,7 @@
 @media(max-width: 321px){
     /* BODY */
     body{
-        margin: 0 1rem;
+        margin: 0 1rem 0 0.8rem;
     }
 
     /* HR */
