--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -62,20 +62,94 @@
     }
 }
 
-@media(min-width: 426px){
+@media(min-width: 726px){
     body{
-        background-image: url(../image/background-images/pergaminho-desktop-04.jpg);
-        border-image: none;
-        
-        max-height: 100%;
-        max-width: 100%;
         padding: 1rem 0.2rem;
         margin: 0 0.2rem;
     }
 
     /* HR */
     .header-hr, .contaner-hr{
-        width: 95%;
+        width: 90%;
+        margin-top: 1.4rem;
+    }
+
+    /* HEADER */
+    .header .logo .logo-title{
+        font-size: 4.5rem;
+    }
+
+    .header .logo img{
+        width: 5rem;
+        height: 5rem;
+    }
+
+    /* Navegation */
+    .header .menu li{
+        font-size: 3.6rem;
+        margin-top: 1rem;
+    }
+
+    /* CONTAINER */
+    .container .panel .general-title{
+        margin: 3rem 0 1.8rem 0;
+        font-size: 4.4rem;
+    }
+    
+    .container .panel p{
+        margin: 2rem 4rem;
+        font-size: 3.4rem;
+        line-height: 3.2rem;
+    }
+
+    /* FOOTER */
+    .footer{
+        margin: 0.8rem 0 0.6rem 0;
+        padding: 0 1rem;
+    }
+
+    .footer .inside-the-footer{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .footer .inside-the-footer .footer-header{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    /* LOGO */
+    .footer .inside-the-footer .footer-header .footer-logo .footer-logo-title{
+        margin: 0 1.8rem 0 1rem;
+        font-size: 3.6rem;
+    }
+
+    /* Navegation */ 
+    .footer .inside-the-footer .footer-header .navegation .footer-menu li{
+        padding: 0.2rem;
+        margin: 0 0.2rem;
+        font-size: 3rem;
+    }
+
+    /* CONTACTS */
+    .footer .inside-the-footer .contacts .nets li{
+        font-size: 2.8rem;
+        margin: 0 1.4rem;
+    }
+}
+
+@media(min-width: 1200px){
+    body{
+        padding: 1rem 0.2rem;
+        margin: 0 0.2rem;
+    }
+
+    /* HR */
+    .header-hr, .contaner-hr{
+        width: 80%;
         margin-top: 1.4rem;
     }
 
@@ -97,13 +171,13 @@
 
     /* CONTAINER */
     .container .panel .general-title{
-        margin: 1rem 0 1.8rem 0;
-        font-size: 4rem;
+        margin: 3rem 0 1.8rem 0;
+        font-size: 5rem;
     }
     
     .container .panel p{
-        margin: 1.4rem 1.6rem;
-        font-size: 3rem;
+        margin: 4rem 8rem;
+        font-size: 3.7rem;
         line-height: 3rem;
     }
 
