--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -71,7 +71,7 @@
     /* HR */
     .header-hr, .contaner-hr{
         width: 90%;
-        margin-top: 1.4rem;
+        margin-top: 2rem;
     }
 
     /* HEADER */
@@ -93,7 +93,7 @@
     /* CONTAINER */
     .container .panel .general-title{
         margin: 3rem 0 1.8rem 0;
-        font-size: 4.4rem;
+        font-size: 4rem;
     }
     
     .container .panel p{
@@ -124,98 +124,23 @@
     /* LOGO */
     .footer .inside-the-footer .footer-header .footer-logo .footer-logo-title{
         margin: 0 1.8rem 0 1rem;
-        font-size: 3.6rem;
+        font-size: 3.8rem;
     }
 
     /* Navegation */ 
     .footer .inside-the-footer .footer-header .navegation .footer-menu li{
         padding: 0.2rem;
-        margin: 0 0.2rem;
-        font-size: 3rem;
-    }
-
-    /* CONTACTS */
-    .footer .inside-the-footer .contacts .nets li{
-        font-size: 2.8rem;
-        margin: 0 1.4rem;
-    }
-}
-
-@media(min-width: 1200px){
-    body{
-        padding: 1rem 0.2rem;
-        margin: 0 0.2rem;
-    }
-
-    /* HR */
-    .header-hr, .contaner-hr{
-        width: 80%;
-        margin-top: 1.4rem;
-    }
-
-    /* HEADER */
-    .header .logo .logo-title{
-        font-size: 4rem;
-    }
-
-    .header .logo img{
-        width: 5rem;
-        height: 5rem;
-    }
-
-    /* Navegation */
-    .header .menu li{
+        margin: 0 0.4rem;
         font-size: 3.2rem;
-        margin-top: 1rem;
-    }
-
-    /* CONTAINER */
-    .container .panel .general-title{
-        margin: 3rem 0 1.8rem 0;
-        font-size: 5rem;
-    }
-    
-    .container .panel p{
-        margin: 4rem 8rem;
-        font-size: 3.7rem;
-        line-height: 3rem;
-    }
-
-    /* FOOTER */
-    .footer{
-        margin: 1rem 0 0.4rem 0;
-        padding: 0 1rem;
-    }
-
-    .footer .inside-the-footer{
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-    }
-
-    .footer .inside-the-footer .footer-header{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    /* LOGO */
-    .footer .inside-the-footer .footer-header .footer-logo .footer-logo-title{
-        margin: 0 1.8rem 0 1rem;
-        font-size: 3.6rem;
-    }
-
-    /* Navegation */ 
-    .footer .inside-the-footer .footer-header .navegation .footer-menu li{
-        padding: 0.2rem;
-        margin: 0 0.2rem;
-        font-size: 3rem;
     }
 
     /* CONTACTS */
     .footer .inside-the-footer .contacts .nets li{
-        font-size: 2.8rem;
+        font-size: 2.9rem;
         margin: 0 1.4rem;
     }
 }
+
+/* @media(min-width: 1025px){
+    
+} */
