--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -5,9 +5,8 @@
     }
 
     /* HR */
-    .header-hr, .contaner-hr{
+    .header-hr, .container-hr{
         width: 90%;
-        margin-top: 1.4rem;
     }
 
     /* HEADER */
@@ -69,9 +68,8 @@
     }
 
     /* HR */
-    .header-hr, .contaner-hr{
+    .header-hr, .container-hr{
         width: 90%;
-        margin-top: 2rem;
     }
 
     /* HEADER */
