--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -100,6 +100,11 @@
         line-height: 3.2rem;
     }
 
+    .container .books .genre .books-images .book{
+        width: 183px;
+        height: 285px;
+    }
+
     /* FOOTER */
     .footer{
         margin: 0.8rem 0 0.6rem 0;
