--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -74,7 +74,7 @@
 
     /* HEADER */
     .header .logo .logo-title{
-        font-size: 4.5rem;
+        font-size: 4.7rem;
     }
 
     .header .logo img{
@@ -84,14 +84,14 @@
 
     /* Navegation */
     .header .menu li{
-        font-size: 3.6rem;
+        font-size: 4rem;
         margin-top: 1rem;
     }
 
     /* CONTAINER */
     .container .panel .general-title{
         margin: 3rem 0 1.8rem 0;
-        font-size: 4rem;
+        font-size: 4.4rem;
     }
     
     .container .panel p{
@@ -102,22 +102,21 @@
 
     /* Container: BOOKS */
     .container .books .general-title{
-        font-size: 3.6rem;
-        letter-spacing: 1rem;
+        font-size: 5rem;
+        letter-spacing: 1.6rem;
         
-        margin-top: 2rem;
-        color: var(--general-title-color);
+        margin: 3rem 0 2.6rem 0;
     }
 
     .container .books .genre .genre-title{
-        font-size: 3.8rem;
+        font-size: 4.4rem;
         letter-spacing: 0.5rem;
     
         padding: 0.5rem;
     }
 
     .container .books .genre .book-name{
-        font-size: 3.4rem;
+        font-size: 3.9rem;
     
         margin-top: 2rem;
     }
