--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -129,7 +129,7 @@
     /* FOOTER */
     .footer{
         margin: 0.8rem 0 0.6rem 0;
-        padding: 0 1rem;
+        padding: 2.6rem 1rem;
     }
 
     .footer .inside-the-footer{
